# invm-frameworks

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  build.mk  configure.ac  invm-cim.pc.in  invm-cli.pc.in  invm-i18n.pc.in  makefile
CMake/Find/: Findmath.cmake
debian/: README.Debian  changelog  control  copyright  libinvm-cim-dev.install  libinvm-cim.install  libinvm-cli-dev.install  libinvm-cli.install  libinvm-i18n-dev.install  libinvm-i18n.install  rules
install/linux/: libinvm-cim.pc.in  libinvm-cli.pc.in  libinvm-i18n.pc.in
install/linux/rel-release/: intelcliframework.spec  invm-frameworks.spec  libintelnvm-cli.spec  libinvm-cli.spec
install/linux/sle-release/: intelcliframework.spec  invm-frameworks.spec  libintelnvm-cli.spec  libinvm-cli.spec
invm-cim/: CMakeLists.txt
invm-cim/src/: framework_resources.rc
invm-cim/src/cimom/: CimomAdapter.cpp  CimomAdapter.h
invm-cim/src/cimom/cmpi/: CmpiAdapter.cpp  CmpiAdapter.h  IntelCmpiProvider.cpp  IntelCmpiProvider.h  IntelToCmpi.cpp  IntelToCmpi.h
invm-cim/src/cimom/wmi/: DllMain.cpp  IntelToWmi.cpp  IntelToWmi.h  IntelWmiProvider.cpp  IntelWmiProvider.h  IntelWmiProviderFactory.cpp  IntelWmiProviderFactory.h  WmiAdapter.cpp  WmiAdapter.h  wmiUtilities.cpp  wmiUtilities.h
invm-cim/src/common/: common_types.h
invm-cim/src/common/logger/: Logger.cpp  Logger.h  Trace.cpp  Trace.h  logging.h
invm-cim/src/common/string/: revision.c  revision.h
invm-cim/src/common/time/: time_utilities.c
invm-cim/src/framework/: AssociationFactory.cpp  AssociationFactory.h  AssociationMapper.cpp  AssociationMapper.h  Attribute.cpp  Attribute.h  CimXml.cpp  CimXml.h  Exception.cpp  Exception.h  ExceptionBadAttribute.cpp  ExceptionBadAttribute.h  ExceptionBadParameter.cpp  ExceptionBadParameter.h  ExceptionInvalidWqlQuery.cpp  ExceptionInvalidWqlQuery.h  ExceptionNoMemory.cpp  ExceptionNoMemory.h  ExceptionNotSupported.cpp  ExceptionNotSupported.h  ExceptionSystemError.cpp  ExceptionSystemError.h  Export.h  IndicationService.cpp  IndicationService.h  Instance.cpp  Instance.h  InstanceFactory.cpp  InstanceFactory.h  InstanceFactoryCreator.h  NullInstanceFactory.cpp  NullInstanceFactory.h  ObjectPath.cpp  ObjectPath.h  ObjectPathBuilder.cpp  ObjectPathBuilder.h  ProviderFactory.cpp  ProviderFactory.h  StringUtil.cpp  StringUtil.h  (+6 more)
invm-cli/: CMakeLists.txt
invm-cli/lang/: es_MX.po
invm-cli/src/framework/: CliFrameworkTypes.cpp  CliFrameworkTypes.h  CommandFilter.cpp  CommandFilter.h  CommandSpec.cpp  CommandSpec.h  CommandVerify.cpp  CommandVerify.h  DuplicateTokenErrorResult.cpp  DuplicateTokenErrorResult.h  ErrorResult.cpp  ErrorResult.h  Export.h  FeatureBase.h  Framework.cpp  Framework.h  HelpFeature.cpp  HelpFeature.h  HelpResult.cpp  HelpResult.h  Lexer.cpp  Lexer.h  Logger.cpp  Logger.h  NoInputErrorResult.h  NotImplementedErrorResult.cpp  NotImplementedErrorResult.h  ObjectListResult.cpp  ObjectListResult.h  OutputOptions.cpp  OutputOptions.h  OutputOptionsValidator.cpp  OutputOptionsValidator.h  ParseErrorResult.h  Parser.cpp  Parser.h  PropertyListResult.h  ResultBase.cpp  ResultBase.h  SimpleListResult.cpp  (+11 more)
invm-i18n/: CMakeLists.txt
invm-i18n/src/: gettext.c  gettext_dummy.c  libIntel_i18n.h  libIntel_i18n_local.h  posix_system.c  safe_str.c  safe_str.h  system.h  textdomain.c  win_system.c
lang/: en_US.po  es_MX.po
src/: makefile
src/framework/: CliFrameworkTypes.cpp  CliFrameworkTypes.h  CommandFilter.cpp  CommandFilter.h  CommandSpec.cpp  CommandVerify.cpp  CommandVerify.h  DuplicateTokenErrorResult.cpp  DuplicateTokenErrorResult.h  ErrorResult.cpp  FeatureBase.cpp  FeatureRef.h  Framework.cpp  Framework.h  HelpFeature.cpp  HelpResult.cpp  HelpResult.h  Lexer.cpp  Lexer.h  Logger.cpp  Logger.h  NoInputErrorResult.cpp  NotImplementedErrorResult.cpp  ObjectListResult.cpp  ParseErrorResult.cpp  ParseErrorResult.h  Parser.cpp  Parser.h  PropertyListResult.cpp  PropertyListResult.h  ResultBase.cpp  SimpleListResult.cpp  SimpleResult.cpp  SimpleResult.h  SyntaxErrorBadValueResult.cpp  SyntaxErrorMissingValueResult.cpp  SyntaxErrorResult.cpp  SyntaxErrorResult.h  SyntaxErrorUnexpectedValueResult.cpp  SyntaxErrorUnexpectedValueResult.h  (+7 more)
src/framework/unittest/: GTestExtensions.h
